--- a/main.ipynb
+++ b/main.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,14 +9,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[76 78 59 21]\n",
+      " [19 65 67 10]\n",
+      " [20 23 95 44]]\n",
+      "[[17.30582427 54.0861309  23.54602144 98.01657404]\n",
+      " [24.84303278 49.70947551 41.11039614 45.12741736]\n",
+      " [72.2673843  50.06489548 89.95535533 40.36560467]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Define the range\n",
+    "low, high = 2, 100\n",
+    "\n",
+    "# Dimensions of the 2D array\n",
+    "rows, cols = 3, 4\n",
+    "\n",
+    "# Generate the 2D array\n",
+    "random_array = np.random.randint(low, high, size=(rows, cols))\n",
+    "\n",
+    "print(random_array)\n",
+    "\n",
+    "npMatrix = None\n",
+    "\n",
+    "npMatrix = np.random.uniform( size=(rows, cols)) * 100\n",
+    "\n",
+    "print(npMatrix)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Matrix:\n",
+    "    \n",
+    "    def __init__( self, \n",
+    "                  rows = None, \n",
+    "                  cols = None, \n",
+    "                  low = None, \n",
+    "                  high = None, \n",
+    "                  wholeNum = None, \n",
+    "                  path = None,\n",
+    "                  listMatrix = None ):\n",
+    "        \n",
+    "        self.__rows = rows\n",
+    "        self.__cols = cols\n",
+    "        self.__npMatrix = None\n",
+    "\n",
+    "        #insert create methods here\n",
+    "        if path == None and listMatrix == None:\n",
+    "            \n",
+    "            if self.__rows == None:\n",
+    "                pass\n",
+    "            else:\n",
+    "                self.__npMatrix = self.__createRandom()\n",
+    "\n",
+    "        elif path == None:\n",
+    "            pass\n",
+    "        else:\n",
+    "            pass\n",
+    "        pass\n",
+    "\n",
+    "    def __createRandom( self, \n",
+    "                        rows, \n",
+    "                        cols,\n",
+    "                        wholeNum,  \n",
+    "                        low = None, \n",
+    "                        high = None ):\n",
+    "        \n",
+    "        if low == None:\n",
+    "            if wholeNum:\n",
+    "                return np.random.randint(low = 0, high = 100, size=(rows, cols))\n",
+    "            else:\n",
+    "                return np.random.uniform( size=(rows, cols)) * 100\n",
+    "        else:\n",
+    "            if wholeNum:\n",
+    "                return np.random.randint(low, high, size=(rows, cols))\n",
+    "            else:\n",
+    "                return np.random.uniform(low, high, size=(rows, cols))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38,21 +127,27 @@
       "2.) List current Matrices available\n",
       "3.) Perform a Matrix Operation\n",
       "4.) Delete a Matrix\n",
-      "5.) Exit\n"
+      "5.) Exit\n",
+      "Please enter the number of one of the options above:\n",
+      " \n",
+      "Have a nice day!\n"
      ]
     }
    ],
    "source": [
     "class StateMachine:\n",
     "    \n",
-    "    __CurrentState = 1\n",
-    "    \n",
-    "\n",
     "    def __init__(self):\n",
-    "        self.__run()        \n",
-    "        \n",
+    "        self.__CurrentState = 1  \n",
+    "        self.__run()\n",
+    "              \n",
     "\n",
+    "    # This is the function for state 1, the home screen\n",
+    "    # Home marks the default screen, and is the only screen to allow a exit from the program\n",
+    "    # Home will return the state to move to.\n",
     "    def __home(self):\n",
+    "\n",
+    "        #intro text and options to move into further states\n",
     "        print(\"Welcome to the Matrix Operation Manager!\\n\\n\"\n",
     "              \"To use this program type the number of the option and hit enter.\\n\"\n",
     "              \"Please select from the following options:\\n\"\n",
@@ -63,30 +158,70 @@
     "              \"5.) Exit\"\n",
     "        )\n",
     "\n",
+    "        #input options and validation call\n",
     "        options = [ 1, 2, 3, 4, 5]\n",
-    "        userInput = int(input())\n",
-    "        \n",
+    "        userInput = None\n",
     "        userInput = self.__inputValidation(options, userInput)\n",
     "        \n",
-    "        if userInput == 5:\n",
-    "            return 0\n",
-    "        else:\n",
-    "            return userInput\n",
+    "        #local state dictionary to transform user input into the class wide defined states\n",
+    "        stateDict = { 1: 2, \n",
+    "                      2: 0,\n",
+    "                      3: 0,\n",
+    "                      4: 0,\n",
+    "                      5: 0}\n",
+    "\n",
+    "        return stateDict[userInput]\n",
     "  \n",
-    "    #def __createMatrix()\n",
+    "\n",
+    "    def __createMatrix(self):\n",
+    "        print(\"Please select from the following options:\\n\"\n",
+    "              \"1.) Create a random matrix\\n\"\n",
+    "              \"2.) Import a matrix\\n\"\n",
+    "              \"3.) Manually create a matrix\\n\"\n",
+    "              \"4.) Return to home\"\n",
+    "        )\n",
+    "\n",
+    "        options = [ 1, 2, 3, 4]\n",
+    "        userInput = None\n",
+    "        userInput = self.__inputValidation(options, userInput)\n",
+    "\n",
+    "        #local state dictionary to transform user input into the class wide defined states\n",
+    "        stateDict = { 1: 3, \n",
+    "                      2: 4,\n",
+    "                      3: 5,\n",
+    "                      4: 1}\n",
+    "\n",
+    "        return stateDict[userInput]\n",
+    "\n",
+    "    def __createRandom(self):\n",
+    "        print(1)\n",
+    "\n",
     "    def __inputValidation(self, options, userInput):\n",
-    "        while userInput not in options:\n",
-    "            print(\"Please enter the number of one of the options above: \")\n",
-    "            userInput = int(input())\n",
     "        \n",
+    "        try:\n",
+    "            userInput = int(input())\n",
+    "            if userInput not in options:\n",
+    "                raise Exception\n",
+    "        except:\n",
+    "            while userInput not in options:\n",
+    "                print(\"Please enter the number of one of the options above:\\n \")\n",
+    "                try:\n",
+    "                    userInput = int(input())\n",
+    "                except:\n",
+    "                    print(\"That is not a whole number.\\n\")\n",
+    "            \n",
     "        return userInput\n",
     "\n",
     "    \n",
-    "    __STATES = { 1: __home}\n",
+    "    __STATES = { 1: __home, \n",
+    "                 2: __createMatrix\n",
+    "                }\n",
     "    \n",
     "    def __run(self):\n",
     "        while self.__CurrentState != 0:\n",
     "            self.__CurrentState = self.__STATES[self.__CurrentState](self)\n",
+    "        \n",
+    "        print(\"Have a nice day!\")\n",
     "            \n",
     "        \n",
     "\n",
@@ -99,11 +234,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "options = [1,2,3,4]\n",
-    "user_input = input()\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
